<resources>
    <string name="app_name">GoAnywhere</string>
    <string name="app_title">GoAnywhere</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_with_your_credentials">Please Login with your credentials</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="or_login_with">Or Login with</string>
    <string name="create_account_with_your_credentials">Create account with your credentials</string>
    <string name="create_password">Create password</string>
    <string name="already_an_existing_user_click_here_to_login">Already an existing user? Click here to login !</string>
    <string name="new_user_click_here_to_register">New User? Click here to register !</string>
    <string name="register">Register</string>
    <string name="registerCapsOn">REGISTER</string>
    <string name="logout">LOGOUT</string>
    <string name="logo">LOGO</string>
    <string name="fb">fb</string>
    <string name="git">git</string>
    <string name="twitter">twitter</string>
</resources>