<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/my_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/card_view"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/app_icon_inside" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/please_login_with_your_credentials" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/password"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:drawableEnd="@drawable/hide_icon"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    android:text="@string/remember_me" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_password" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:text="@string/or_login_with" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/fb"
                    android:src="@drawable/facebook" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/git"
                    android:src="@drawable/github" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/twitter"
                    android:src="@drawable/twitter" />


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/clickToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:text="@string/new_user_click_here_to_register"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="25dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>