<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/my_primary" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-20dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/create_account_with_your_credentials" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/create_password"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/hide_icon"
                android:inputType="textPassword" />


            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/registerCapsOn"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />


            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/clickToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:text="@string/already_an_existing_user_click_here_to_login"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_view2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_icon_inside" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>